Adds <div>'s for "Quick Add" and "Hall of Fame"

--- a/index.html
+++ b/index.html
@@ -16,5 +16,24 @@
     <div> <!-- Random Game -->
       <h3 class="text-center"><del>Random Game</del> <!-- Rename? --></h3>
     </div>
+
+    <div>
+      <h5 class="text-center">Quick Add</h3> <!-- Add form to allow for game addition -->
+    </div>
+
+    <div class="container"> <!-- Hall of Fame -->
+      <h5 class="text-center">Hall of Fame</h3>
+      <div class="row">
+        <div class="col-md-4 col-xs-1">
+          <p class="text-center">Lorem</p> <!-- Rename -->
+        </div>
+        <div class="col-md-4 col-xs-1">
+          <p class="text-center">Lorem</p> <!-- Rename -->
+        </div>
+        <div class="col-md-4 col-xs-1">
+          <p class="text-center">Lorem</p> <!-- Rename -->
+        </div>
+      </div>
+    </div>
   </body>
 </html>
