--- a/index.html
+++ b/index.html
@@ -2,23 +2,52 @@
 <html>
   <head>
     <title>Game Library</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
 
   <body>
     <h1 class="text-center">Game Library</h1> <!-- Replace this with a navbar -->
 
-    <div> <!-- Recommended Games -->
+    <div> <!-- Recommended Game -->
       <h3 class="text-center">Recommended Game</h3>
+      <div class="container">
+        <div class="row">
+          <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6 col-md-4" alt="BOXART">
+          <div class="col-6 text-center align-middle">
+          <p class="text-center align-text-bottom">Assassin's Creed IV: Black Flag <br> 2013 <br> </p>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div> <!-- Random Game -->
-      <h3 class="text-center"><del>Random Game</del> <!-- Rename? --></h3>
-    </div>
+    <div class="container"> <!-- Random Game and Quick Add -->
+      <div class="row">
 
-    <div>
-      <h5 class="text-center">Quick Add</h3> <!-- Add form to allow for game addition -->
+        <div class="col-md-6 col-lg-8"> <!-- Random Game -->
+          <h3 class="text-center">Player's Choice</h3>
+        </div>
+
+        <div class="col-md-6 col-lg-4"> <!-- Quick Add -->
+          <h5 class="text-center">Quick Add</h3>
+          <form>
+            <div class="form-group">
+              <label for="quickAddGameName">Name</label>
+              <input type="text" class-"form-control" id="quickAddGameName" placeholder="Game Name">
+            </div>
+            <div class="form-group">
+              <label for="quickAddImage">Box Art</label>
+              <input type="file" class="form-control-file form-control-sm" id="quickAddImage" placeholder="Box Art Url">
+            </div>
+            <div>
+              <label for="quickAddYear">Year</label>
+              <input type="number" class="form-control" id="quickAddYear" placeholder="Release Year">
+            </div>
+            <button type="submit" class="btn btn-dark">Submit</button>
+          </form>
+        </div>
+
+      </div>
     </div>
 
     <div class="container"> <!-- Hall of Fame -->
