Adds .form-group to the "Quick Add" <div>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <label for="quickAddImage">Box Art</label>
               <input type="file" class="form-control-file form-control-sm" id="quickAddImage" placeholder="Box Art Url">
             </div>
-            <div>
+            <div class="form-group">
               <label for="quickAddYear">Year</label>
               <input type="number" class="form-control" id="quickAddYear" placeholder="Release Year">
             </div>
