Added platforms and level of completion to the static template

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
           <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6 col-md-4" alt="BOXART">
           <div class="col-6 text-center align-middle">
-          <p class="text-center align-text-bottom">Assassin's Creed IV: Black Flag <br> 2013 <br> </p>
+            <p class="text-center align-text-bottom">Assassin's Creed V: Black Flag<!-- Game Name --><br>2013<!-- Game Year --><br><span>Switch</span> <span>Xbox</span> <span>Playstation 4</span> <span>Steam</span> <span>PC</span><!-- Platforms --><!-- Replace with icons --><br>Owned<!-- Level of Completion --></p>
           </div>
         </div>
       </div>
