--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <div class="row">
           <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6 col-md-4" alt="BOXART">
           <div class="col-6 text-center align-middle">
-            <p class="text-center align-text-bottom">Assassin's Creed V: Black Flag<!-- Game Name --><br>2013<!-- Game Year --><br><span>Switch</span> <span>Xbox</span> <span>Playstation 4</span> <span>Steam</span> <span>PC</span><!-- Platforms --><!-- Replace with icons --><br>Owned<!-- Level of Completion --></p>
+            <p class="text-center align-text-bottom">
+              Assassin's Creed V: Black Flag<!-- Game Name --><br>
+              2013<!-- Game Year --><br>
+              <span>Switch</span>
+              <span>Xbox</span>
+              <span>Playstation 4</span>
+              <span>Steam</span>
+              <span>PC</span><!-- Platforms --><!-- Replace with icons --><br>
+              Owned<!-- Level of Completion -->
+            </p>
           </div>
         </div>
       </div>
@@ -33,7 +42,7 @@
           <form>
             <div class="form-group">
               <label for="quickAddGameName">Name</label>
-              <input type="text" class-"form-control" id="quickAddGameName" placeholder="Game Name">
+              <input type="text" class="form-control" id="quickAddGameName" placeholder="Game Name">
             </div>
             <div class="form-group">
               <label for="quickAddImage">Box Art</label>
