--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="row">
           <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6 col-md-4" alt="BOXART">
-          <div class="col-6 text-center align-middle">
+          <div class="col-6 col-md-8 text-center align-middle">
             <p class="text-center align-text-bottom">
               Assassin's Creed V: Black Flag<!-- Game Name --><br>
               2013<!-- Game Year --><br>
@@ -32,11 +32,24 @@
 
     <div class="container"> <!-- Random Game and Quick Add -->
       <div class="row">
-
         <div class="col-md-6 col-lg-8"> <!-- Random Game -->
           <h3 class="text-center">Player's Choice</h3>
+          <div class="row">
+            <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6" alt="Boxart">
+            <div class="col-6 text-center align-middle">
+              <p class="text-center align-text-bottom">
+                Assassin's Creed V: Black Flag<!-- Game Name --><br>
+                2013<!-- Game Year --><br>
+                <span>Switch</span>
+                <span>Xbox</span>
+                <span>Playstation 4</span>
+                <span>Steam</span>
+                <span>PC</span><!-- Platforms --><!-- Replace with icons --><br>
+                Owned<!-- Level of Completion -->
+              </p>
+            </div>
+          </div>
         </div>
-
         <div class="col-md-6 col-lg-4"> <!-- Quick Add -->
           <h5 class="text-center">Quick Add</h3>
           <form>
@@ -55,7 +68,6 @@
             <button type="submit" class="btn btn-dark">Submit</button>
           </form>
         </div>
-
       </div>
     </div>
 
@@ -63,13 +75,13 @@
       <h5 class="text-center">Hall of Fame</h3>
       <div class="row">
         <div class="col-md-4 col-xs-1">
-          <p class="text-center">Lorem</p> <!-- Rename -->
+          <p class="text-center">Play Next</p>
         </div>
         <div class="col-md-4 col-xs-1">
-          <p class="text-center">Lorem</p> <!-- Rename -->
+          <p class="text-center">Most Wanted Game</p>
         </div>
         <div class="col-md-4 col-xs-1">
-          <p class="text-center">Lorem</p> <!-- Rename -->
+          <p class="text-center">Newest Game</p>
         </div>
       </div>
     </div>
