Adds links and img to "Hall of Fame"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="container"> <!-- Random Game and Quick Add -->
       <div class="row">
-        <div class="col-md-6 col-lg-8"> <!-- Random Game -->
+        <div class="col-md-6 col-lg-4"> <!-- Random Game -->
           <h3 class="text-center">Player's Choice</h3>
           <div class="row">
             <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6" alt="Boxart">
@@ -41,16 +41,11 @@
                 Assassin's Creed V: Black Flag<!-- Game Name --><br>
                 2013<!-- Game Year --><br>
                 <span>Switch</span>
-                <span>Xbox</span>
-                <span>Playstation 4</span>
-                <span>Steam</span>
-                <span>PC</span><!-- Platforms --><!-- Replace with icons --><br>
-                Owned<!-- Level of Completion -->
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4"> <!-- Quick Add -->
+        <div class="col-md-6 col-lg-8"> <!-- Quick Add -->
           <h5 class="text-center">Quick Add</h3>
           <form>
             <div class="form-group">
@@ -76,12 +71,15 @@
       <div class="row">
         <div class="col-md-4 col-xs-1">
           <p class="text-center">Play Next</p>
+          <a href="#"><img src="#" alt="Boxart"></a>
         </div>
         <div class="col-md-4 col-xs-1">
           <p class="text-center">Most Wanted Game</p>
+          <a href="#"><img src="#" alt="Boxart"></a>
         </div>
         <div class="col-md-4 col-xs-1">
           <p class="text-center">Newest Game</p>
+          <a href="#"><img src="#" alt="Boxart"></a>
         </div>
       </div>
     </div>
