Replaces <H1> with Navbar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <h1 class="text-center">Game Library</h1> <!-- Replace this with a navbar -->
+    <nav class="navbar navbar-expand-lg nvabar-light bg-light">
+    <a class="navbar-brand" href="#">Gaming Inventory</a>
+    </nav>
 
     <div> <!-- Recommended Game -->
       <h3 class="text-center">Recommended Game</h3>
