--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
       <div class="row">
         <div class="col-md-4 col-xs-1">
           <p class="text-center">Play Next</p>
-          <a href="#"><img src="#" alt="Boxart"></a>
+          <a href="#"><img class="img-fluid" src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" alt="Boxart"></a>
         </div>
         <div class="col-md-4 col-xs-1">
           <p class="text-center">Most Wanted Game</p>
-          <a href="#"><img src="#" alt="Boxart"></a>
+          <a href="#"><img class="img-fluid" src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" alt="Boxart"></a>
         </div>
         <div class="col-md-4 col-xs-1">
           <p class="text-center">Newest Game</p>
-          <a href="#"><img src="#" alt="Boxart"></a>
+          <a href="#"><img class="img-fluid" src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" alt="Boxart"></a>
         </div>
       </div>
     </div>
