--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg nvabar-light bg-light">
-    <a class="navbar-brand" href="#">Gaming Inventory</a>
+      <a class="navbar-brand" href="#">Gaming Inventory</a>
     </nav>
 
     <div> <!-- Recommended Game -->
@@ -34,7 +34,7 @@
 
     <div class="container"> <!-- Random Game and Quick Add -->
       <div class="row">
-        <div class="col-md-6 col-lg-4"> <!-- Random Game -->
+        <div class="col-12 col-md-6 col-lg-4"> <!-- Random Game -->
           <h3 class="text-center">Player's Choice</h3>
           <div class="row">
             <img src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" class="img-fluid col-6" alt="Boxart">
@@ -47,7 +47,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-8"> <!-- Quick Add -->
+        <div class="d-none d-md-block col-12 col-md-6 col-lg-8"> <!-- Quick Add -->
           <h5 class="text-center">Quick Add</h3>
           <form>
             <div class="form-group">
@@ -71,16 +71,16 @@
     <div class="container"> <!-- Hall of Fame -->
       <h5 class="text-center">Hall of Fame</h3>
       <div class="row">
-        <div class="col-md-4 col-xs-1">
-          <p class="text-center">Play Next</p>
+        <div class="col-md-4 col-12">
+          <h6 class="text-center">Play Next</h6>
           <a href="#"><img class="img-fluid" src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" alt="Boxart"></a>
         </div>
-        <div class="col-md-4 col-xs-1">
-          <p class="text-center">Most Wanted Game</p>
+        <div class="col-md-4 col-12">
+          <h6 class="text-center">Most Wanted Game</h6>
           <a href="#"><img class="img-fluid" src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" alt="Boxart"></a>
         </div>
-        <div class="col-md-4 col-xs-1">
-          <p class="text-center">Newest Game</p>
+        <div class="col-md-4 col-12">
+          <h6 class="text-center">Newest Game</h6>
           <a href="#"><img class="img-fluid" src="src/boxart/boxart_Assassins-Creed-Black-Flag.jpg" alt="Boxart"></a>
         </div>
       </div>
