--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg nvabar-light bg-light">
+    <nav class="navbar navbar-expand navbar-light">
       <a class="navbar-brand" href="#">Gaming Inventory</a>
+      <div>
+        <ul class="navbar-nav">
+          <li class="nav-item"> <!-- List -->
+            <a class="nav-link disabled" href="#">List</a> <!-- Change to My Games -->
+          </li>
+          <li class="nav-item"> <!-- Game Completion -->
+            <a class="nav-link disabled" href="#">Play</a> <!-- Name??? -->
+          </li>
+          <li class="nav-item"> <!-- Wish List -->
+            <a class="nav-link disabled" href="#">Wish List</a> <!-- Name??? -->
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <div> <!-- Recommended Game -->
@@ -48,7 +61,7 @@
           </div>
         </div>
         <div class="d-none d-md-block col-12 col-md-6 col-lg-8"> <!-- Quick Add -->
-          <h5 class="text-center">Quick Add</h3>
+          <h3 class="text-center">Quick Add</h3>
           <form>
             <div class="form-group">
               <label for="quickAddGameName">Name</label>
@@ -69,7 +82,7 @@
     </div>
 
     <div class="container"> <!-- Hall of Fame -->
-      <h5 class="text-center">Hall of Fame</h3>
+      <h3 class="text-center">Hall of Fame</h3>
       <div class="row">
         <div class="col-md-4 col-12">
           <h6 class="text-center">Play Next</h6>
