--- a/list.html
+++ b/list.html
@@ -25,6 +25,19 @@
     </nav>
 
     <div>
+	<h3 class="text-center">My Games</h3>
+	<table class="table">
+	    <thead>
+		<tr>
+		    <th scope="col">#</th>
+		    <th scope="col">Name</th>
+		    <th scope="col">Year</th>
+		    <th scope="col">Platforms</th>
+		    <th scope="col">Digital</th>
+		    <th scope="col">Completion</th>
+		</tr>
+	    </thead>
+	</table>
     </div>
 
     <div><!-- Scripts -->
