--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <body>
     <nav class="navbar navbar-expand navbar-light">
-      <a class="navbar-brand" href="#">Gaming Inventory</a>
+      <a class="navbar-brand" href="index.html">Gaming Inventory</a>
       <div>
         <ul class="navbar-nav">
           <li class="nav-item"> <!-- List -->
-            <a class="nav-link disabled" href="#">List</a> <!-- Change to My Games -->
+            <a class="nav-link disabled" href="list.html">List</a> <!-- Change to My Games -->
           </li>
           <li class="nav-item"> <!-- Game Completion -->
             <a class="nav-link disabled" href="#">Play</a> <!-- Name??? -->
