--- a/list-alt.html
+++ b/list-alt.html
@@ -8,11 +8,11 @@
 
   <body>
     <nav class="navbar navbar-expand navbar-light">
-      <a class="navbar-brand" href="#">Gaming Inventory</a>
+      <a class="navbar-brand" href="index.html">Gaming Inventory</a>
       <div>
         <ul class="navbar-nav">
           <li class="nav-item"> <!-- List -->
-            <a class="nav-link disabled" href="#">List</a> <!-- Change to My Games -->
+            <a class="nav-link disabled" href="list-alt.html">List</a> <!-- Change to My Games -->
           </li>
           <li class="nav-item"> <!-- Game Completion -->
             <a class="nav-link disabled" href="#">Play</a> <!-- Name??? -->
@@ -24,20 +24,13 @@
       </div>
     </nav>
 
-    <div>
-	<h3 class="text-center">My Games</h3>
-	<table class="table">
-	    <thead>
-		<tr>
-		    <th scope="col">#</th>
-		    <th scope="col">Name</th>
-		    <th scope="col">Year</th>
-		    <th scope="col">Platforms</th>
-		    <th scope="col">Digital</th>
-		    <th scope="col">Completion</th>
-		</tr>
-	    </thead>
-	</table>
+    <div class="container">
+	<div class="row">
+	    <img src="src/boxart/boxart_ACNH.jpg" class="img-fluid col-3">
+	    <img src="src/boxart/boxart_FETH.jpg" class="img-fluid col-3">
+	    <img src="src/boxart/boxart_SSBU.jpg" class="img-fluid col-3">
+	    <img src="src/boxart/boxart_LSWTCS.jpg" class="img-fluid col-3">
+	</div>
     </div>
 
     <div><!-- Scripts -->
